Fixed decimal truncation Still has some errors with very small values vs 0

--- a/styles.css
+++ b/styles.css
@@ -38,8 +38,9 @@ body {
     font-weight: 00;
 }
 
-#func,
-#pm {
+#per,
+#pm,
+#clr {
 	background-color: gray;
 	color: black;
 }
